--- a/Algorithms/03_InsertSort.ipynb
+++ b/Algorithms/03_InsertSort.ipynb
@@ -11,11 +11,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.27+6-post-Ubuntu-0ubuntu124.04"
   }
  },
  "nbformat": 4,
