--- a/Algorithms/04_MergeSort.ipynb
+++ b/Algorithms/04_MergeSort.ipynb
@@ -90,8 +90,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cc4432a2-f33c-45ff-a768-c8afc3ca43a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class MergeSort{\n",
+    "\n",
+    "    /*\n",
+    "    * Merges two subarrays of arr[]\n",
+    "    * First subarray is arr[left...mid]\n",
+    "    * Second subarray is arr[mid+1...right]\n",
+    "    */\n",
+    "    public static void merge(int[] arr, int left, int mid, int right){\n",
+    "\n",
+    "        // Find sizes of two subarrays to be merged\n",
+    "        int n1 = mid - left +1;\n",
+    "        int n2 = right - mid;\n",
+    "\n",
+    "        // Create temporary arrays\n",
+    "        int[] L = new int[n1];\n",
+    "        int[] R = new int[n2];\n",
+    "    \n",
+    "        // Copy data from original array to temporary arrays L[] and R[]\n",
+    "        for (int i = 0; i < n1; i++) {\n",
+    "            L[i] = arr[left + i];\n",
+    "        }\n",
+    "        for (int j = 0; j < n2; j++) {\n",
+    "            R[j] = arr[mid + j + 1];\n",
+    "        }\n",
+    "        \n",
+    "        // Merge the two temporary arrays back into arr[left...right]\n",
+    "\n",
+    "        // Initialize pointer for the two temporary arrays\n",
+    "        int i = 0, j = 0;\n",
+    "\n",
+    "        // Initialize pointer for the merged array\n",
+    "        int k = left;\n",
+    "\n",
+    "        // While both subarrays have elements left to compare\n",
+    "        while (i < n1 && j < n2) {\n",
+    "        \n",
+    "            // If the current element in L[] is smaller or equal to the current element in R[]\n",
+    "            if (L[i] <= R[j]) {\n",
+    "                // Place the smaller element (L[i]) into the merged array\n",
+    "                arr[k] = L[i];\n",
+    "        \n",
+    "                // Move the pointer in L[] forward\n",
+    "                i++;\n",
+    "            } else {\n",
+    "                // Otherwise, the current element in R[] is smaller\n",
+    "                // Place R[j] into the merged array\n",
+    "                arr[k] = R[j];\n",
+    "        \n",
+    "                // Move the pointer in R[] forward\n",
+    "                j++;\n",
+    "            }\n",
+    "        \n",
+    "            // Move the pointer forward in arr[] (the main array)\n",
+    "            k++;\n",
+    "        }\n",
+    "\n",
+    "        // If the condition of (i < n1 && j < n2) is not correct\n",
+    "        // meaning one subarray is completely copied, but the other may be has elements left\n",
+    "        // We need to copy the remaining elements from the subarray that is not yet finished\n",
+    "        // Copy remaining elements from leftArray, if any\n",
+    "        while(i <n1){\n",
+    "            arr[k] = L[i];\n",
+    "            i++;\n",
+    "            k++;\n",
+    "        }\n",
+    "\n",
+    "        // Copy remaining elements from right Array, if any\n",
+    "        while(j <n2){\n",
+    "            arr[k] = R[j];\n",
+    "            j++;\n",
+    "            k++;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Main method that sorts arr[left...right] using merge()\n",
+    "    public static void sort(int[] arr, int left, int right) {\n",
+    "        // Base condition: only proceed if the current subarray has more than one element\n",
+    "        if (left < right) {\n",
+    "            \n",
+    "            // Calculate the middle index to divide the array into two halves\n",
+    "            int mid = (left + right) / 2;\n",
+    "    \n",
+    "            // Recursively sort the first half of the array (from 'left' to 'mid')\n",
+    "            sort(arr, left, mid);\n",
+    "    \n",
+    "            // Recursively sort the second half of the array (from 'mid + 1' to 'right')\n",
+    "            sort(arr, mid + 1, right);\n",
+    "    \n",
+    "            // Merge the two sorted halves back into a single sorted segment\n",
+    "            merge(arr, left, mid, right);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Prints the elements of the given array\n",
+    "    public static void printArray(int[] arr) {\n",
+    "        for (int i = 0; i < arr.length; i++) {\n",
+    "            System.out.print(arr[i] + \" \");\n",
+    "        }\n",
+    "        System.out.println(); // Print a newline after the array\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "86d26f82-6684-488b-b5a2-50fdd6ed7389",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array:\n",
+      "38 27 43 3 9 82 10 \n",
+      "Sorted array:\n",
+      "3 9 10 27 38 43 82 \n"
+     ]
+    }
+   ],
+   "source": [
+    "// Define the array to be sorted\n",
+    "int[] arr = {38, 27, 43, 3, 9, 82, 10};\n",
+    "\n",
+    "// Print original array\n",
+    "System.out.println(\"Original array:\");\n",
+    "MergeSort.printArray(arr);\n",
+    "\n",
+    "// Call sort on the entire array\n",
+    "MergeSort.sort(arr, 0, arr.length - 1);\n",
+    "\n",
+    "// Print sorted array\n",
+    "System.out.println(\"Sorted array:\");\n",
+    "MergeSort.printArray(arr);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71c7a54d-0ad3-4422-93e1-0e735d87dfa0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9642f20-2f9a-4014-a552-0f941e2b3b79",
    "metadata": {},
    "outputs": [],
    "source": []
